[package]
name = "habibyte-api"
version = "0.1.0"
edition = "2021"

[dependencies]
habibyte-ledger = { path = "../habibyte-ledger" }
habibyte-identity = { path = "../habibyte-identity" }
tokio = { version = "1.0", features = ["full"] }
warp = "0.3" 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
