[package]
name = "habibyte-p2p"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.53", features = ["tokio", "gossipsub", "mdns", "noise", "yamux", "tcp", "macros", "dns", "kad"] }
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
